# AgentiaHome

./: README.md  Tools.py  chainlit.md  chatbot.py  env  f.py  main.py  pyproject.toml
.chainlit/: config.toml
src/agentiahome/: Agentia.py  __init__.py
